corrige documentação do swagger para endpoint de login
